--- a/Space Invaders/Space Invaders/Info.plist
+++ b/Space Invaders/Space Invaders/Info.plist
@@ -32,6 +32,11 @@
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>LSEnvironment</key>
+	<dict>
+		<key>SpaceInvadersRows</key>
+		<integer>8</integer>
+	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
