--- a/Space Invaders/Space Invaders/Info.plist
+++ b/Space Invaders/Space Invaders/Info.plist
@@ -32,6 +32,10 @@
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>prstartk.ttf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
